force-app/main/default/objects/Co_Pilot_Event__e/Co_Pilot_Event__e.object-meta.xml
<CustomObject>
    <label>Co-Pilot Event</label>
    <pluralLabel>Co-Pilot Events</pluralLabel>
</CustomObject>