force-app/main/default/objects/Co_Pilot_Event__e/fields/Detected_Language__c.field-meta.xml
<CustomField>
    <fullName>Detected_Language__c</fullName>
    <label>Detected Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>