force-app/main/default/objects/Co_Pilot_Event__e/fields/Intake_Id__c.field-meta.xml
<CustomField>
    <fullName>Intake_Id__c</fullName>
    <label>Intake Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>