force-app/main/default/objects/Co_Pilot_Event__e/fields/Lead_Fit__c.field-meta.xml
<CustomField>
    <fullName>Lead_Fit__c</fullName>
    <label>Lead Fit</label>
    <length>40</length>
    <type>Text</type>
</CustomField>