force-app/main/default/objects/Co_Pilot_Event__e/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>