force-app/main/default/objects/Co_Pilot_Event__e/fields/Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Suggestion__c</fullName>
    <label>Suggestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>