force-app/main/default/objects/Co_Pilot_Event__e/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <label>Transcript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>