force-app/main/default/objects/Co_Pilot_Event__e/fields/Translation__c.field-meta.xml
<CustomField>
    <fullName>Translation__c</fullName>
    <label>Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>