force-app/main/default/objects/Co_Pilot_Event__e/fields/Turn_Type__c.field-meta.xml
<CustomField>
    <fullName>Turn_Type__c</fullName>
    <label>Turn Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>